// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`parse addition 1`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 18,
      "left": Binary {
        "col": 14,
        "left": Binary {
          "col": 6,
          "left": Literal {
            "col": 0,
            "line": 0,
            "type": "Float",
            "value": "1.22",
          },
          "line": 0,
          "operator": "+",
          "right": Literal {
            "col": 8,
            "line": 0,
            "type": "Float",
            "value": "1.23",
          },
          "type": "Float",
        },
        "line": 0,
        "operator": "+",
        "right": Literal {
          "col": 16,
          "line": 0,
          "type": "Int",
          "value": "8",
        },
        "type": "Float",
      },
      "line": 0,
      "operator": "+",
      "right": Literal {
        "col": 20,
        "line": 0,
        "type": "Float",
        "value": "3.13",
      },
      "type": "Float",
    },
  ],
  "line": 0,
  "type": "Float",
}
`;

exports[`parse addition 2`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 8,
      "left": Literal {
        "col": 0,
        "line": 0,
        "type": "Str",
        "value": ""hello"",
      },
      "line": 0,
      "operator": "+",
      "right": Literal {
        "col": 10,
        "line": 0,
        "type": "Str",
        "value": ""hello"",
      },
      "type": "Str",
    },
  ],
  "line": 0,
  "type": "Str",
}
`;

exports[`parse addition 3`] = `
[
  {
    "col": 5,
    "line": 0,
    "message": "(During type resolution) cannot use operator + with left operand of type Float and right operand of type Bool.",
  },
]
`;

exports[`parse subtraction 1`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 18,
      "left": Binary {
        "col": 14,
        "left": Binary {
          "col": 6,
          "left": Literal {
            "col": 0,
            "line": 0,
            "type": "Float",
            "value": "1.22",
          },
          "line": 0,
          "operator": "-",
          "right": Literal {
            "col": 8,
            "line": 0,
            "type": "Float",
            "value": "1.23",
          },
          "type": "Float",
        },
        "line": 0,
        "operator": "-",
        "right": Literal {
          "col": 16,
          "line": 0,
          "type": "Int",
          "value": "8",
        },
        "type": "Float",
      },
      "line": 0,
      "operator": "-",
      "right": Literal {
        "col": 20,
        "line": 0,
        "type": "Float",
        "value": "3.13",
      },
      "type": "Float",
    },
  ],
  "line": 0,
  "type": "Float",
}
`;

exports[`parse subtraction 2`] = `
[
  {
    "col": 5,
    "line": 0,
    "message": "(During type resolution) cannot use operator - with left operand of type Float and right operand of type Bool.",
  },
]
`;

exports[`parse multiplication 1`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 18,
      "left": Binary {
        "col": 14,
        "left": Binary {
          "col": 6,
          "left": Literal {
            "col": 0,
            "line": 0,
            "type": "Float",
            "value": "1.22",
          },
          "line": 0,
          "operator": "*",
          "right": Literal {
            "col": 8,
            "line": 0,
            "type": "Float",
            "value": "1.23",
          },
          "type": "Float",
        },
        "line": 0,
        "operator": "*",
        "right": Literal {
          "col": 16,
          "line": 0,
          "type": "Int",
          "value": "8",
        },
        "type": "Float",
      },
      "line": 0,
      "operator": "*",
      "right": Literal {
        "col": 20,
        "line": 0,
        "type": "Float",
        "value": "3.13",
      },
      "type": "Float",
    },
  ],
  "line": 0,
  "type": "Float",
}
`;

exports[`parse multiplication 2`] = `
[
  {
    "col": 5,
    "line": 0,
    "message": "(During type resolution) cannot use operator * with left operand of type Float and right operand of type Bool.",
  },
]
`;

exports[`parse division 1`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 18,
      "left": Binary {
        "col": 14,
        "left": Binary {
          "col": 6,
          "left": Literal {
            "col": 0,
            "line": 0,
            "type": "Float",
            "value": "1.22",
          },
          "line": 0,
          "operator": "/",
          "right": Literal {
            "col": 8,
            "line": 0,
            "type": "Float",
            "value": "1.23",
          },
          "type": "Float",
        },
        "line": 0,
        "operator": "/",
        "right": Literal {
          "col": 16,
          "line": 0,
          "type": "Int",
          "value": "8",
        },
        "type": "Float",
      },
      "line": 0,
      "operator": "/",
      "right": Literal {
        "col": 20,
        "line": 0,
        "type": "Float",
        "value": "3.13",
      },
      "type": "Float",
    },
  ],
  "line": 0,
  "type": "Float",
}
`;

exports[`parse division 2`] = `
[
  {
    "col": 5,
    "line": 0,
    "message": "(During type resolution) cannot use operator / with left operand of type Float and right operand of type Bool.",
  },
]
`;

exports[`parse modulo 1`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 18,
      "left": Binary {
        "col": 14,
        "left": Binary {
          "col": 6,
          "left": Literal {
            "col": 0,
            "line": 0,
            "type": "Float",
            "value": "1.22",
          },
          "line": 0,
          "operator": "%",
          "right": Literal {
            "col": 8,
            "line": 0,
            "type": "Float",
            "value": "1.23",
          },
          "type": "Float",
        },
        "line": 0,
        "operator": "%",
        "right": Literal {
          "col": 16,
          "line": 0,
          "type": "Int",
          "value": "8",
        },
        "type": "Float",
      },
      "line": 0,
      "operator": "%",
      "right": Literal {
        "col": 20,
        "line": 0,
        "type": "Float",
        "value": "3.13",
      },
      "type": "Float",
    },
  ],
  "line": 0,
  "type": "Float",
}
`;

exports[`parse modulo 2`] = `
[
  {
    "col": 5,
    "line": 0,
    "message": "(During type resolution) cannot use operator % with left operand of type Float and right operand of type Bool.",
  },
]
`;

exports[`parse order of operations 1`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 6,
      "left": Literal {
        "col": 0,
        "line": 0,
        "type": "Float",
        "value": "1.22",
      },
      "line": 0,
      "operator": "+",
      "right": Binary {
        "col": 18,
        "left": Binary {
          "col": 14,
          "left": Literal {
            "col": 8,
            "line": 0,
            "type": "Float",
            "value": "1.23",
          },
          "line": 0,
          "operator": "*",
          "right": Literal {
            "col": 16,
            "line": 0,
            "type": "Int",
            "value": "8",
          },
          "type": "Float",
        },
        "line": 0,
        "operator": "/",
        "right": Literal {
          "col": 20,
          "line": 0,
          "type": "Float",
          "value": "3.13",
        },
        "type": "Float",
      },
      "type": "Float",
    },
  ],
  "line": 0,
  "type": "Float",
}
`;

exports[`parse order of operations 2`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 22,
      "left": Binary {
        "col": 16,
        "left": Binary {
          "col": 10,
          "left": Binary {
            "col": 4,
            "left": Literal {
              "col": 0,
              "line": 0,
              "type": "Int",
              "value": "123",
            },
            "line": 0,
            "operator": "*",
            "right": Literal {
              "col": 6,
              "line": 0,
              "type": "Int",
              "value": "123",
            },
            "type": "Int",
          },
          "line": 0,
          "operator": "/",
          "right": Literal {
            "col": 12,
            "line": 0,
            "type": "Int",
            "value": "123",
          },
          "type": "Int",
        },
        "line": 0,
        "operator": "%",
        "right": Literal {
          "col": 18,
          "line": 0,
          "type": "Int",
          "value": "123",
        },
        "type": "Int",
      },
      "line": 0,
      "operator": "*",
      "right": Literal {
        "col": 24,
        "line": 0,
        "type": "Int",
        "value": "123",
      },
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`parse order of operations 3`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 10,
      "left": Binary {
        "col": 4,
        "left": Literal {
          "col": 0,
          "line": 0,
          "type": "Int",
          "value": "123",
        },
        "line": 0,
        "operator": "+",
        "right": Literal {
          "col": 6,
          "line": 0,
          "type": "Int",
          "value": "456",
        },
        "type": "Int",
      },
      "line": 0,
      "operator": "==",
      "right": Binary {
        "col": 17,
        "left": Literal {
          "col": 13,
          "line": 0,
          "type": "Int",
          "value": "123",
        },
        "line": 0,
        "operator": "+",
        "right": Literal {
          "col": 19,
          "line": 0,
          "type": "Int",
          "value": "456",
        },
        "type": "Int",
      },
      "type": "Bool",
    },
  ],
  "line": 0,
  "type": "Bool",
}
`;

exports[`parse order of operations 4`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 23,
      "left": Binary {
        "col": 10,
        "left": Binary {
          "col": 4,
          "left": Literal {
            "col": 0,
            "line": 0,
            "type": "Int",
            "value": "123",
          },
          "line": 0,
          "operator": "+",
          "right": Literal {
            "col": 6,
            "line": 0,
            "type": "Int",
            "value": "456",
          },
          "type": "Int",
        },
        "line": 0,
        "operator": "!=",
        "right": Binary {
          "col": 17,
          "left": Literal {
            "col": 13,
            "line": 0,
            "type": "Int",
            "value": "123",
          },
          "line": 0,
          "operator": "+",
          "right": Literal {
            "col": 19,
            "line": 0,
            "type": "Int",
            "value": "456",
          },
          "type": "Int",
        },
        "type": "Bool",
      },
      "line": 0,
      "operator": "or",
      "right": Binary {
        "col": 36,
        "left": Binary {
          "col": 30,
          "left": Literal {
            "col": 26,
            "line": 0,
            "type": "Int",
            "value": "123",
          },
          "line": 0,
          "operator": "+",
          "right": Literal {
            "col": 32,
            "line": 0,
            "type": "Int",
            "value": "456",
          },
          "type": "Int",
        },
        "line": 0,
        "operator": "==",
        "right": Binary {
          "col": 43,
          "left": Literal {
            "col": 39,
            "line": 0,
            "type": "Int",
            "value": "123",
          },
          "line": 0,
          "operator": "+",
          "right": Literal {
            "col": 45,
            "line": 0,
            "type": "Int",
            "value": "456",
          },
          "type": "Int",
        },
        "type": "Bool",
      },
      "type": "Bool",
    },
  ],
  "line": 0,
  "type": "Bool",
}
`;

exports[`parse parens 1`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 20,
      "left": Binary {
        "col": 16,
        "left": Binary {
          "col": 7,
          "left": Literal {
            "col": 1,
            "line": 0,
            "type": "Float",
            "value": "1.22",
          },
          "line": 0,
          "operator": "+",
          "right": Literal {
            "col": 9,
            "line": 0,
            "type": "Float",
            "value": "1.23",
          },
          "type": "Float",
        },
        "line": 0,
        "operator": "*",
        "right": Literal {
          "col": 18,
          "line": 0,
          "type": "Int",
          "value": "8",
        },
        "type": "Float",
      },
      "line": 0,
      "operator": "/",
      "right": Literal {
        "col": 22,
        "line": 0,
        "type": "Float",
        "value": "3.13",
      },
      "type": "Float",
    },
  ],
  "line": 0,
  "type": "Float",
}
`;

exports[`parse block 1`] = `
Block {
  "col": 0,
  "expressions": [
    Block {
      "col": 0,
      "expressions": [
        Binary {
          "col": 31,
          "left": Binary {
            "col": 8,
            "left": Literal {
              "col": 2,
              "line": 0,
              "type": "Float",
              "value": "1.22",
            },
            "line": 0,
            "operator": "+",
            "right": Binary {
              "col": 16,
              "left": Literal {
                "col": 10,
                "line": 0,
                "type": "Float",
                "value": "1.23",
              },
              "line": 0,
              "operator": "*",
              "right": Block {
                "col": 18,
                "expressions": [
                  Binary {
                    "col": 22,
                    "left": Literal {
                      "col": 20,
                      "line": 0,
                      "type": "Int",
                      "value": "8",
                    },
                    "line": 0,
                    "operator": "/",
                    "right": Literal {
                      "col": 24,
                      "line": 0,
                      "type": "Float",
                      "value": "3.13",
                    },
                    "type": "Float",
                  },
                ],
                "line": 0,
                "type": "Float",
              },
              "type": "Float",
            },
            "type": "Float",
          },
          "line": 0,
          "operator": "+",
          "right": Literal {
            "col": 33,
            "line": 0,
            "type": "Float",
            "value": "2.",
          },
          "type": "Float",
        },
      ],
      "line": 0,
      "type": "Float",
    },
  ],
  "line": 0,
  "type": "Float",
}
`;

exports[`parse block 2`] = `
Block {
  "col": 0,
  "expressions": [
    DropValue {
      "child": Binary {
        "col": 2,
        "left": Literal {
          "col": 0,
          "line": 0,
          "type": "Int",
          "value": "1",
        },
        "line": 0,
        "operator": "+",
        "right": Literal {
          "col": 4,
          "line": 0,
          "type": "Int",
          "value": "1",
        },
        "type": "Int",
      },
      "col": 2,
      "line": 0,
      "type": "Null",
    },
    Assignment {
      "col": 7,
      "isDropped": true,
      "line": 0,
      "name": "x",
      "type": "Null",
      "value": Unary {
        "child": Literal {
          "col": 12,
          "line": 0,
          "type": "Int",
          "value": "2",
        },
        "col": 11,
        "line": 0,
        "operator": "-",
        "type": "Int",
      },
    },
    Unary {
      "child": Variable {
        "col": 16,
        "fullName": "x",
        "line": 0,
        "name": "x",
        "templateTypes": [],
        "type": "Int",
      },
      "col": 15,
      "line": 0,
      "operator": "-",
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`parse variable assignment 1`] = `
Block {
  "col": 8,
  "expressions": [
    Assignment {
      "col": 8,
      "isDropped": false,
      "line": 1,
      "name": "x",
      "type": "Float",
      "value": Literal {
        "col": 12,
        "line": 1,
        "type": "Float",
        "value": "1.22",
      },
    },
    Assignment {
      "col": 8,
      "isDropped": false,
      "line": 2,
      "name": "y",
      "type": "Float",
      "value": Block {
        "col": 12,
        "expressions": [
          Literal {
            "col": 14,
            "line": 2,
            "type": "Float",
            "value": "1.23",
          },
        ],
        "line": 2,
        "type": "Float",
      },
    },
    Assignment {
      "col": 8,
      "isDropped": true,
      "line": 3,
      "name": "z",
      "type": "Null",
      "value": Literal {
        "col": 12,
        "line": 3,
        "type": "Float",
        "value": "3.13",
      },
    },
    Assignment {
      "col": 8,
      "isDropped": false,
      "line": 4,
      "name": "x",
      "type": "Float",
      "value": Literal {
        "col": 12,
        "line": 4,
        "type": "Float",
        "value": "3.",
      },
    },
  ],
  "line": 1,
  "type": "Float",
}
`;

exports[`parse variable assignment 2`] = `
[
  {
    "col": 9,
    "line": 0,
    "message": "(During type resolution) tried to reassign variable x with type Null but it was previously defined in the same scope with type Float",
  },
]
`;

exports[`parse variable assignment 3`] = `
[
  {
    "col": 4,
    "line": 0,
    "message": "variable assignments are not allowed within expressions.",
  },
]
`;

exports[`parse variable assignment 4`] = `
[
  {
    "col": 4,
    "line": 0,
    "message": "variable assignments are not allowed within expressions.",
  },
]
`;

exports[`parse if 1`] = `
Block {
  "col": 0,
  "expressions": [
    If {
      "col": 0,
      "conditionalBranches": [
        {
          "branch": Block {
            "col": 8,
            "expressions": [
              Literal {
                "col": 10,
                "line": 0,
                "type": "Int",
                "value": "1",
              },
            ],
            "line": 0,
            "type": "Int",
          },
          "condition": Literal {
            "col": 3,
            "line": 0,
            "type": "Bool",
            "value": "true",
          },
        },
      ],
      "elseBranch": Block {
        "col": 19,
        "expressions": [
          Literal {
            "col": 21,
            "line": 0,
            "type": "Int",
            "value": "2",
          },
        ],
        "line": 0,
        "type": "Int",
      },
      "line": 0,
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`parse if 2`] = `
[
  {
    "col": 0,
    "line": 0,
    "message": "(During type resolution) condition must be boolean, but found Int",
  },
]
`;

exports[`parse if 3`] = `
[
  {
    "col": 12,
    "line": 0,
    "message": "Expected 'else' or 'else if'",
  },
]
`;

exports[`parse if 4`] = `
[
  {
    "col": 0,
    "line": 0,
    "message": "(During type resolution) all branches of if expression must have the same type, but found branches of types Int and Float",
  },
]
`;

exports[`parse if 5`] = `
Block {
  "col": 0,
  "expressions": [
    Assignment {
      "col": 0,
      "isDropped": true,
      "line": 0,
      "name": "x",
      "type": "Null",
      "value": Literal {
        "col": 4,
        "line": 0,
        "type": "Int",
        "value": "10",
      },
    },
    If {
      "col": 8,
      "conditionalBranches": [
        {
          "branch": Block {
            "col": 17,
            "expressions": [
              Literal {
                "col": 19,
                "line": 0,
                "type": "Int",
                "value": "1",
              },
            ],
            "line": 0,
            "type": "Int",
          },
          "condition": Binary {
            "col": 13,
            "left": Variable {
              "col": 11,
              "fullName": "x",
              "line": 0,
              "name": "x",
              "templateTypes": [],
              "type": "Int",
            },
            "line": 0,
            "operator": "<",
            "right": Literal {
              "col": 15,
              "line": 0,
              "type": "Int",
              "value": "0",
            },
            "type": "Bool",
          },
        },
        {
          "branch": Block {
            "col": 38,
            "expressions": [
              Literal {
                "col": 40,
                "line": 0,
                "type": "Int",
                "value": "2",
              },
            ],
            "line": 0,
            "type": "Int",
          },
          "condition": Binary {
            "col": 33,
            "left": Variable {
              "col": 31,
              "fullName": "x",
              "line": 0,
              "name": "x",
              "templateTypes": [],
              "type": "Int",
            },
            "line": 0,
            "operator": ">",
            "right": Literal {
              "col": 35,
              "line": 0,
              "type": "Int",
              "value": "10",
            },
            "type": "Bool",
          },
        },
      ],
      "elseBranch": Block {
        "col": 49,
        "expressions": [
          Literal {
            "col": 51,
            "line": 0,
            "type": "Int",
            "value": "3",
          },
        ],
        "line": 0,
        "type": "Int",
      },
      "line": 0,
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`parse function 1`] = `
Block {
  "col": 0,
  "expressions": [
    Function {
      "body": Block {
        "col": 30,
        "expressions": [
          Binary {
            "col": 34,
            "left": Variable {
              "col": 32,
              "fullName": "a",
              "line": 0,
              "name": "a",
              "templateTypes": [],
              "type": "Int",
            },
            "line": 0,
            "operator": "+",
            "right": Variable {
              "col": 36,
              "fullName": "b",
              "line": 0,
              "name": "b",
              "templateTypes": [],
              "type": "Int",
            },
            "type": "Int",
          },
        ],
        "line": 0,
        "type": "Int",
      },
      "col": 0,
      "fullName": "add$Int$Int",
      "line": 0,
      "name": "add",
      "params": [
        {
          "name": "a",
          "type": "Int",
        },
        {
          "name": "b",
          "type": "Int",
        },
      ],
      "returnType": "Int",
      "type": FuncType {
        "paramTypes": [
          "Int",
          "Int",
        ],
        "returnType": "Int",
      },
    },
  ],
  "line": 0,
  "type": FuncType {
    "paramTypes": [
      "Int",
      "Int",
    ],
    "returnType": "Int",
  },
}
`;

exports[`parse function 2`] = `
Block {
  "col": 8,
  "expressions": [
    Function {
      "body": Block {
        "col": 91,
        "expressions": [
          Variable {
            "col": 12,
            "fullName": "a",
            "line": 2,
            "name": "a",
            "templateTypes": [],
            "type": FuncType {
              "paramTypes": [
                "Int",
              ],
              "returnType": FuncType {
                "paramTypes": [
                  "Int",
                ],
                "returnType": "Int",
              },
            },
          },
        ],
        "line": 1,
        "type": FuncType {
          "paramTypes": [
            "Int",
          ],
          "returnType": FuncType {
            "paramTypes": [
              "Int",
            ],
            "returnType": "Int",
          },
        },
      },
      "col": 8,
      "fullName": "myFunc$Func_Int_Func_Int_Int__$Func__Int_",
      "line": 1,
      "name": "myFunc",
      "params": [
        {
          "name": "a",
          "type": FuncType {
            "paramTypes": [
              "Int",
            ],
            "returnType": FuncType {
              "paramTypes": [
                "Int",
              ],
              "returnType": "Int",
            },
          },
        },
        {
          "name": "b",
          "type": FuncType {
            "paramTypes": [],
            "returnType": "Int",
          },
        },
      ],
      "returnType": FuncType {
        "paramTypes": [
          "Int",
        ],
        "returnType": FuncType {
          "paramTypes": [
            "Int",
          ],
          "returnType": "Int",
        },
      },
      "type": FuncType {
        "paramTypes": [
          FuncType {
            "paramTypes": [
              "Int",
            ],
            "returnType": FuncType {
              "paramTypes": [
                "Int",
              ],
              "returnType": "Int",
            },
          },
          FuncType {
            "paramTypes": [],
            "returnType": "Int",
          },
        ],
        "returnType": FuncType {
          "paramTypes": [
            "Int",
          ],
          "returnType": FuncType {
            "paramTypes": [
              "Int",
            ],
            "returnType": "Int",
          },
        },
      },
    },
  ],
  "line": 1,
  "type": FuncType {
    "paramTypes": [
      FuncType {
        "paramTypes": [
          "Int",
        ],
        "returnType": FuncType {
          "paramTypes": [
            "Int",
          ],
          "returnType": "Int",
        },
      },
      FuncType {
        "paramTypes": [],
        "returnType": "Int",
      },
    ],
    "returnType": FuncType {
      "paramTypes": [
        "Int",
      ],
      "returnType": FuncType {
        "paramTypes": [
          "Int",
        ],
        "returnType": "Int",
      },
    },
  },
}
`;

exports[`parse function 3`] = `
Block {
  "col": 0,
  "expressions": [
    DropValue {
      "child": Function {
        "body": Block {
          "col": 25,
          "expressions": [
            Variable {
              "col": 27,
              "fullName": "a",
              "line": 0,
              "name": "a",
              "templateTypes": [],
              "type": "Int",
            },
          ],
          "line": 0,
          "type": "Int",
        },
        "col": 0,
        "fullName": "myFunc$Int",
        "line": 0,
        "name": "myFunc",
        "params": [
          {
            "name": "a",
            "type": "Int",
          },
        ],
        "returnType": "Int",
        "type": FuncType {
          "paramTypes": [
            "Int",
          ],
          "returnType": "Int",
        },
      },
      "col": 0,
      "line": 0,
      "type": "Null",
    },
    FunctionCall {
      "args": [
        Literal {
          "col": 39,
          "line": 0,
          "type": "Int",
          "value": "1",
        },
      ],
      "col": 32,
      "fullName": "myFunc$Int",
      "line": 0,
      "name": "myFunc",
      "referToByName": "full",
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`parse function 4`] = `
[
  {
    "col": 32,
    "line": 0,
    "message": "(During type resolution) function myFunc<Float, unknown> not found",
  },
]
`;

exports[`parse function 5`] = `
[
  {
    "col": 12,
    "line": 4,
    "message": "(During type resolution) unable to resolve type of variable foo",
  },
]
`;
